# svc-contact

./: .cspell.project-words.txt  .env.base  .env.repo  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: grpc.rs
client-grpc/src/: client.rs  grpc.rs  lib.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
client-rest/: Cargo.toml  README.md
client-rest/examples/: rest.rs
docs/: conops.md  icd.md  sdd.md
openapi/: types.rs
proto/: grpc.proto
server/: Cargo.toml  README.md  build.rs
server/src/: config.rs  lib.rs  main.rs
server/src/grpc/: client.rs  server.rs
server/src/grpc/api/: cargo.rs  mod.rs
server/src/rest/: api.rs  mod.rs  server.rs
server/src/rest/api/: health.rs  mod.rs  user.rs
server/tests/: integration_test.rs
