[workspace]
members = ["server", "client-grpc"]

[workspace.package]
edition      = "2021"
homepage     = "https://www.arrowair.com/docs/documentation/services/intro"
keywords     = ["vtol", "server", "contact"]                                # max 5
license-file = "LICENSE"
repository   = "https://github.com/Arrow-air/svc-contact"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs
